horizontal scroll problem bug for small devices fixed

--- a/style.css
+++ b/style.css
@@ -553,8 +553,9 @@ footer .icons {
     display: flex;
     gap: 50px;
     justify-content: center;
-    margin-bottom: 50px;
     align-items: center;
+    width: 50%;
+    margin: 0 auto 50px;
 }
 
 footer hr {
@@ -576,6 +577,10 @@ footer p:last-child {
         width: 80%;
         margin: 50px auto;
         flex-direction: column;
+    }
+
+    .navbar{
+        display: none;
     }
 
     header nav .logo img {
